gcc/testsuite/g++.dg/template/class2.C
// PR c++/13451

template <class T>
struct A {
  struct B;
  struct A::B { }; // { dg-error "" }
};
